Make sure platform names are not too small on Konqueror

--- a/src/kapidox/data/htmlresource/frameworks.css
+++ b/src/kapidox/data/htmlresource/frameworks.css
@@ -26,7 +26,7 @@ table.frameworks td {
 
 .framework-platforms {
     float: right;
-    font-size: 8px;
+    font-size: 80%;
 }
 
 .framework-platform {
